--- a/src/assets/globalCss.css
+++ b/src/assets/globalCss.css
@@ -1,6 +1,11 @@
-.main-content-box {
+.global-content-box {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     min-height: calc(100vh - 135px);
+}
+
+.global-pager {
+    text-align: right;
+    margin-top: 10px;
 }
